# ML_crypto_news_classification

./: README.md  crypto_news_classification.ipynb  pyproject.toml  sentiment_best_model.joblib  sentiment_tfidf_vectorizer.joblib
