[tool.poetry]
name = "crypto-news-classifier"
version = "0.1.0"
description = "A machine learning tool to classify cryptocurrency news articles by sentiment."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
kagglehub = "^0.3.4"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
